Changes to XMLs

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,8 @@
     <string name="title_activity_recommend">RecommendActivity</string>
 
     <string name="title_activity_camera">CameraActivity</string>
+
+    <string name="title_activity_splash">SplashActivity</string>
+
+    <string name="title_activity_splash_activity">splash_activity</string>
 </resources>
