Added Scanner Activity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">Companio</string>
 
     <string name="title_activity_login">LoginActivity</string>
-    <string name="dummy_button">Dummy Button</string>
+    <string name="dummy_button">Scan</string>
     <string name="dummy_content">DUMMY\nCONTENT</string>
 
     <string name="title_activity_recommend">RecommendActivity</string>
